kubernetes/apps/observability/kube-prometheus-stack/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: observability
  annotations:
    external-dns.kubernetes.io/cloudflare-proxied: "false"
    gatus.home-operations.com/endpoint: |-
      group: observability
      path: /-/healthy
      conditions:
        - "[STATUS] == 200"
spec:
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  hostnames:
    - prometheus.${SECRET_DOMAIN} # yayamlls-disable-line
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
